--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,47 @@
+/* This part is for divs and background colors */
 body {
-    background-color: blanchedalmond;
+    background-color: skyblue;
 }
 
-div {
-    background-color: aqua;
-}
 
-nav {
+
+
+
+.content {
     background-color: whitesmoke;
+    padding-block-start: 0.5cm;
+    padding-block-end: 1cm;
 }
 
-#attendence-section {
-    background-color: blue;
+
+/* This Part is the Text  */
+h1 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: xx-large;
+    background-position: 0cm;
+    margin: 5 5 5 5;
+    position: relative;
+    text-align: center;
 }
+
+h2 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 4ex;
+    margin: 0 0 0 0;
+    text-align: center;
+
+}
+
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.5em;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+
