--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,26 @@ h3 {
 }
 
 
+
+/* nav bar */
+ol .nav {
+    list-style-type: none;
+    margin: 0 0 0 0;
+    padding: 0;
+    width: 200px;
+    background-color: cornsilk;
+    border: 1px solid black;
+}
+
+li a {
+    display: block;
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: white;
+}
