--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,6 @@ body {
     background-color: skyblue;
 }
 
-
-
-
-
 .content {
     background-color: whitesmoke;
     padding-block-start: 0.5cm;
@@ -29,42 +25,41 @@ h2 {
     font-size: 4ex;
     margin: 0 0 0 0;
     text-align: center;
-
-}
-
-h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.5em;
-}
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
 }
 
 
+    h3 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1em;
+    }
 
-/* nav bar */
-ol .nav {
-    list-style-type: none;
-    margin: 0 0 0 0;
-    padding: 0;
-    width: 200px;
-    background-color: cornsilk;
-    border: 1px solid black;
-}
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
 
-li a {
-    display: block;
-    color: black;
-    padding: 8px 16px;
-    text-decoration: none;
-}
 
-/* Change the link color on hover */
-li a:hover {
-    background-color: #555;
-    color: white;
-}
+
+    /* nav bar */
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 200px;
+        background-color: #f1f1f1;
+    }
+
+    li a {
+        display: block;
+        color: #000;
+        padding: 8px 16px;
+        text-decoration: none;
+    }
+
+    /* Change the link color on hover */
+    li a:hover {
+        background-color: #555;
+        color: white;
+    }
