--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 4ex;
     margin: 0 0 0 0;
     text-align: center;
